changelog.md  and title Micro-tech  Signed-off-by: Signed-off-by: johnmcconnell@yahoo.com

--- a/project.json
+++ b/project.json
@@ -1,7 +1,7 @@
 {
   "id": "com.micro-tech-mich.AresM",
-  "name": "Ares-M-2.14",
-  "version": "0.2.15",
+  "name": "Ares-M",
+  "version": "0.2.18",
   "title": "AresM",
   "description": "AresM Enyo ide ",
   "author": {
@@ -101,9 +101,6 @@
         "webos": {}
       },
       "appId": ""
-    },
-    "webos": {
-      "enabled": true
     }
   },
   "preview": {
