--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "ares-ide-2.4",
-	"version": "0.2.18-M",
+	"version": "0.2.18",
 	"license" : "Apache 2.0",
 	"description": "A browser-based code editor and UI designer for Enyo 2 projects",
 	"keywords": ["ide", "enyo", "phonegap", "android", "ios", "windowsphone", "blackberry", "webos", "html5"],
 	"homepage": "https://github.com/enyojs/ares-project/blob/master/README.md",
 	"bugs": {
-		"url": "https://enyojs.atlassian.net/browse/ENYO"
+		"url": ""
 	},
 	"bin": "./ide.js",
 	"repository" : {
@@ -20,26 +20,26 @@
 	"engineStrict": true,
 	"os" : [ "darwin", "linux", "win32" ],
 	"dependencies": {
-		"archiver": "~1.0.1",
-		"ares-generator": "~0.3.4",
-		"async": "~2.0.1",
-		"base64-stream": "~0.1.2",
+		"archiver": "^1.2.0",
+		"ares-generator": "^0.3.4",
+		"async": "^2.1.4",
+		"base64-stream": "^0.1.3",
 		"busboy": "~0.2.13",
 		"combined-stream": "~1.0.5",
-		"dropbox": "~2.1.0",
+		"dropbox": "~2.4.0",
 		"express": "~4.14.0",
-		"graceful-fs": "4.1.6",
+		"graceful-fs": "4.1.11",
 		"less": "~2.7.1",
 		"mime": "~1.3.4",
 		"mkdirp": "~0.5.1",
 		"nopt": "~3.0.6",
-		"npmlog": "~4.0.0",
+		"npmlog": "~4.0.1",
 		"phonegap-build-api": "~0.4.0",
-		"request": "~2.74.0",
+		"request": "~2.79.0",
 		"rimraf": "~2.5.4",
 		"semver": "5.3.0",
 		"temp": "~0.8.3",
-		"tunnel": "~0.0.2"
+		"tunnel": "~0.0.4"
 	},
 	"bundledDependencies": [
 		"archiver",
@@ -64,9 +64,9 @@
 		"tunnel"
 	],
 	"devDependencies": {
-		"mocha": "~3.0.2",
-		"shelljs": "~0.7.3",
-		"should": "~11.1.0",
+		"mocha": "~3.2.0",
+		"shelljs": "~0.7.5",
+		"should": "~11.1.1",
 		"jshint": "~2.9.3"
 	},
 	"scripts" : {
