add Enyo 2.6 and 2.7  bootplates
add Enyo 2.6 and 2.7  bootplates

JohnMcConnell@yahoo.com

--- a/project.json
+++ b/project.json
@@ -1,8 +1,8 @@
 {
   "id": "com.micro-tech-mich.AresM",
-  "name": "Ares-M-d",
+  "name": "Ares-Master",
   "version": "0.2.18",
-  "title": "AresM",
+  "title": "Ares M",
   "description": "AresM Enyo ide ",
   "author": {
     "name": "john mcconnell",
