--- a/package.json
+++ b/package.json
@@ -1,35 +1,34 @@
 {
-	"name": "ares-ide-2.4",
+	"name": "ares2-M",
 	"version": "0.2.18",
 	"license" : "Apache 2.0",
 	"description": "A browser-based code editor and UI designer for Enyo 2 projects",
 	"keywords": ["ide", "enyo", "phonegap", "android", "ios", "windowsphone", "blackberry", "webos", "html5"],
-	"homepage": "https://github.com/enyojs/ares-project/blob/master/README.md",
+	"homepage": "https://github.com/micro-tech/Ares-m/blob/master/README.md",
 	"bugs": {
 		"url": ""
 	},
 	"bin": "./ide.js",
 	"repository" : {
 		"type" : "git",
-		"url" : "http://github.com/enyojs/ares-project.git"
+		"url" : "https://github.com/micro-tech/Ares-m"
 	},
 	"engines": {
 		"node" : ">=0.10.6",
 		"npm": ">=1.2.11"
 	},
-	"engineStrict": true,
 	"os" : [ "darwin", "linux", "win32" ],
 	"dependencies": {
 		"archiver": "^1.2.0",
-		"ares-generator": "^0.3.4",
+		"ares-generator": "^0.3.7",
 		"async": "^2.1.4",
 		"base64-stream": "^0.1.3",
-		"busboy": "~0.2.13",
+		"busboy": "~0.0.15",
 		"combined-stream": "~1.0.5",
 		"dropbox": "~2.4.0",
-		"express": "~4.14.0",
+		"express": "~3.4.8",
 		"graceful-fs": "4.1.11",
-		"less": "~2.7.1",
+		"less": "~1.7.5",
 		"mime": "~1.3.4",
 		"mkdirp": "~0.5.1",
 		"nopt": "~3.0.6",
